fix: 開発環境用にコードを分離

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vercel-hono",
   "scripts": {
-    "dev": "tsx watch api/index.ts",
+    "dev": "tsx watch src/serve.ts",
     "start": "vercel dev",
     "deploy": "vercel"
   },
